# cutile-python

./: .flake8  CHANGELOG.md  pyproject.toml  pytest.ini  setup.py
cext/: CMakeLists.txt  arena.h  coroutine_util.cpp  coroutine_util.h  cuda_helper.cpp  cuda_loader.cpp  cuda_loader.h  ipc_util.cpp  ipc_util.h  launch_helper.h  memory.cpp  memory.h  module.cpp  py.h  stream_buffer.cpp  stream_buffer.h  tile_kernel.cpp  vec.h
cext/test/: test_arena.cpp  test_vec.cpp
changelog.d/: autotuning-api.md  ct-print.md  dataclass-dunder.md  divmod.md  enum.md  exhaustive_search_benchmark.md  exp-rounding-mode.md  jax-tuple-parameters.md  memory-order-args-on-ldst.md  no-libpython.md  optimization-hints-default.md  pow-integer-exponent.md  raw-array-memory.md  static-shape-annotation.md  support-py314.md  tiled-view.md  tuple-comprehension.md
changelog.d/future/: floordiv-float.md  mma-scaled.md
docs/: requirements.txt
docs/source/: compilation.rst  conf.py  data.rst  debugging.rst  execution.rst  interoperability.rst  memory_model.rst  operations.rst  performance.rst  quickstart.rst  references.rst
docs/source/_ext/: doctest_ext.py
docs/source/data/: tiled_view.rst
experimental/cuda-lang/: CONTRIBUTING.md  README.md  pyproject.toml  setup.py
experimental/cuda-lang/docs/source/: data.rst  operations.rst
experimental/cuda-lang/src/cuda/lang/: __init__.py  _compile.py  _datatype.py  _enums.py  _exception.py  _execution.py  _fp_utils.py  _logging.py  compilation.py
experimental/cuda-lang/src/cuda/lang/_ir/: _host_program.py  enum_to_mlir.py  hir.py  ir.py  op_defs.py  ops.py  type.py  type_checking_helpers.py
experimental/cuda-lang/src/cuda/lang/_ir/op_impl/: copy_async_impl.py  cp_async.py  math_impl.py  matrix_impl.py  mbarrier_impl.py  pointer_impl.py  tcgen05_impl.py  vector_impl.py
experimental/cuda-lang/src/cuda/lang/_mlir/: __init__.py  _builtins.py  _util.py  arith.py  cf.py  gpu.py  llvm.py  memref.py  nvvm.py  ptr.py
experimental/cuda-lang/src/cuda/lang/_mlir/extras/: types.py
experimental/cuda-lang/src/cuda/lang/_passes/: ast2hir.py  canonicalize_parameters.py  flatten_cfg.py  handle_dyn_shared_mem.py  hoist_tensor_map.py  simt_semantics.py
experimental/cuda-lang/src/cuda/lang/_passes/ir2mlir/: __init__.py  pass_definition.py  type_conversion.py
experimental/cuda-lang/src/cuda/lang/_stub/: __init__.py  _libdevice.py  _nvvm_mlir_support.py  _nvvm_support.py  barrier.py  cluster_launch_control.py  copy_async.py  core_api.py  cp_async.py  foreign_function.py  libdevice.py  load_store_matrix.py  math.py  mbarrier.py  nvvm.py  nvvm_mlir_interfaces.py  prefetch.py  static_requirements.py  tcgen05.py  tensor_map.py  types.py
experimental/cuda-lang/test/: conftest.py  test_arithmetic.py  test_atomics.py  test_cluster_launch_control.py  test_control_flow.py  test_copy_async.py  test_cp_async.py  test_dynamic_shared_mem.py  test_gpu_primitives.py  test_hir.py  test_inline_ptx.py  test_ir.py  test_launch.py  test_libdevice.py  test_load_store_matrix.py  test_local_array.py  test_math.py  test_mbarrier.py  test_pdl.py  test_pointers.py  test_prefetch.py  test_print.py  test_tcgen05.py  test_tcgen05_descriptors.py  test_tensor_map.py  test_vectors.py
experimental/cuda-lang/test/examples/: __init__.py  test_b200_mma.py  test_bf16_b200_flash_attention_fwd.py  test_bf16_b200_mha_causal.py  test_bf16_b200_mha_noncausal.py  test_blackscholes.py  test_conv2d.py  test_gluon_tutorial_14_multicta.py  test_histogram64.py  test_matmul_sharedmem.py  test_nbody.py  test_simt_transpose.py  test_softmax.py  test_tcgen05_mma_instructions.py  test_wmma.py
experimental/cuda-lang/test/examples/tk/: test_bf16_b200_mha_causal.py  test_bf16_b200_mha_noncausal.py  test_fp8_b200_gemm.py  test_mxfp8_b200_gemm.py
experimental/cuda-lang/test/mlir/: test_attr.py  test_mlir2cubin.py  test_nvvm_mlir_interfaces.py  test_operation.py  test_type.py
experimental/cuda-lang/test/passes/: test_dce.py  test_flatten_cfg.py  test_ir2mlir.py
experimental/cuda-lang/test/util/: __init__.py  filecheck_utils.py  ir_utils.py
experimental/cuda-lang/tutorial/: fp16_gemm_0.py  fp16_gemm_1.py  fp16_gemm_2.py  fp16_gemm_3.py  fp8_gemm_cluster_splitk.py  nvfp4_gemm_1_ws.py  nvfp4_gemm_2_quantize_fp4.py
experimental/src/cuda/tile_experimental/: _autotuner.py
samples/: AttentionFMHA.py
samples/templates/: AttentionFMHA.py
scripts/: check_license.py
src/cuda/tile/: __init__.py  _annotated_function.py  _cext.pyi  _compile.py  _compiler_options.py  _context.py  _coroutine_util.py  _datatype.py  _exception.py  _execution.py  _ir2bytecode.py  _memory_model.py  _stub.py
src/cuda/tile/_bytecode/: type.py  type_base.py
src/cuda/tile/_ir/: aggregate_support.py  arithmetic_ops.py  control_flow_ops.py  core_ops.py  hir.py  hir_stubs.py  ir.py  op_impl.py  ops.py  ops_utils.py  scope.py  type.py  typing_support.py
src/cuda/tile/_passes/: alias_analysis.py  ast2hir.py  check_dtype_support.py  code_motion.py  (+4 more)
test/: bench_attention.py  bench_fft.py  bench_matmul.py  bench_rms_norm.py  bench_transpose.py  bench_vec_add.py  benchmark_tuning.json  benchmark_tuning.py  conftest.py  gpu_clocks.py  requirements-ft.txt  requirements.txt  test_array.py  test_astile.py  test_atomic.py  test_binary_elementwise.py  test_bytecode.py  test_bytecode_version_compat.py  test_code_motion.py  test_compiler_options.py  test_concurrent_launch.py  test_constfold.py  test_coroutine_util.py  test_dataclass.py  test_dce.py  test_enum.py  test_export_compat.py  test_function_debuginfo.py  test_ir_types.py  test_jax.py  test_list.py  test_load_store.py  test_loose_typing.py  test_mma.py  test_mma_scaled.py  test_name_mangling.py  test_posponed_const_annotation.py  test_print.py  test_propagate_divby.py  test_reduction.py  (+11 more)
test/kernels/: rms_norm.py
(+7 files in other folders)
