# SPDX-FileCopyrightText: Copyright (c) <2026> NVIDIA CORPORATION & AFFILIATES. All rights reserved.
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "cuda-lang"
dynamic = ["version"]
description = "Experimental SIMT programming model."
requires-python = ">=3.10, <3.15"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {file = "src/cuda/lang/VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "cuda",
  "cuda.lang",
  "cuda.lang.*",
]

[tool.setuptools.package-data]
"cuda.lang" = ["bin/*"]
